# spy-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-pt-br.md  README.md  SECURITY.md  docker-compose.yml  main.py  mongo-init.js  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
commands/: __init__.py  achievements_command.py  admin_commands.py  help_command.py  sleep_command.py  stats_command.py  top_command.py
config/: __init__.py  database.py  settings.py
events/: __init__.py  message_events.py  presence_events.py  reaction_events.py  voice_events.py
models/: __init__.py  achievement.py  user.py
scripts/: release.py
services/: __init__.py  achievement_service.py  report_service.py  silence_service.py  sleep_service.py  user_service.py
utils/: __init__.py  formatters.py
